# ownhealth

./: .gitignore  docker-compose.yml  flake.nix  start-dev.sh
backend/: Cargo.toml
backend/src/: domain.rs  main.rs  providers.rs
backend/src/config/: config.rs
backend/src/database/: database.rs
backend/src/providers/: garmin.rs  provider.rs
config/: default.toml
db/: schema.sql
