cargo-features = ["edition2024"]

[package]
name = "ownhealth-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"]}
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
html-escape = "0.2.13"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }

