cargo-features = ["edition2024"]

[package]
name = "ownhealth-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"]}
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
html-escape = "0.2.13"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
garmin_download = "0.2.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "derive", "macros", "uuid", "chrono", "bigdecimal"] }
config = "0.15.11"

